unpackaged/main/default/objects/User/fields/Approve_Opportunities_Won__c.field-meta.xml
<CustomField>
    <fullName>Approve_Opportunities_Won__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be used by Vanguard to indicate who can Close Opportunities</description>
    <label>Approve Opportunities Won - Vanguard</label>
    <type>Checkbox</type>
</CustomField>