unpackaged/main/default/objects/User/fields/Authority_Level__c.field-meta.xml
<CustomField>
    <fullName>Authority_Level__c</fullName>
    <description>Authority Matrix Authority Level for Sales Approvals</description>
    <inlineHelpText>Authority Matrix Authority Level</inlineHelpText>
    <label>Authority Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>