unpackaged/main/default/objects/User/fields/BD_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>BD_Employee_ID__c</fullName>
    <label>BD Employee ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>