unpackaged/main/default/objects/User/fields/BDG_Branch__c.field-meta.xml
<CustomField>
    <fullName>BDG_Branch__c</fullName>
    <label>BDG Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Branches</valueSetName>
    </valueSet>
</CustomField>