unpackaged/main/default/objects/User/fields/BDG_Department__c.field-meta.xml
<CustomField>
    <fullName>BDG_Department__c</fullName>
    <inlineHelpText>Will overwrite the Salesforce Department field</inlineHelpText>
    <label>BDG Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Department</valueSetName>
    </valueSet>
</CustomField>