unpackaged/main/default/objects/User/fields/BDG_Division__c.field-meta.xml
<CustomField>
    <fullName>BDG_Division__c</fullName>
    <inlineHelpText>Will overwrite the Salesforce Division field</inlineHelpText>
    <label>BDG Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Division</valueSetName>
    </valueSet>
</CustomField>