unpackaged/main/default/objects/User/fields/BOXX_Division__c.field-meta.xml
<CustomField>
    <fullName>BOXX_Division__c</fullName>
    <description>To group and route for approval processes</description>
    <label>Approval Routing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>BOXX CA</fullName>
            </value>
            <value>
                <fullName>BOXX US</fullName>
            </value>
            <value>
                <fullName>Camps</fullName>
            </value>
            <value>
                <fullName>ES Canada</fullName>
            </value>
            <value>
                <fullName>ES US</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Head Office</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Treasury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>