unpackaged/main/default/objects/User/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Austin, TX</fullName>
            </value>
            <value>
                <fullName>Calgary, AB</fullName>
            </value>
            <value>
                <fullName>Denver, CO</fullName>
            </value>
            <value>
                <fullName>Houston, TX</fullName>
            </value>
            <value>
                <fullName>Lewisville, TX</fullName>
            </value>
            <value>
                <fullName>North Dakota</fullName>
            </value>
            <value>
                <fullName>Stoney Creek, ON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>