unpackaged/main/default/objects/User/fields/Branch_ID__c.field-meta.xml
<CustomField>
    <fullName>Branch_ID__c</fullName>
    <description>Used to map Branch to object records. Populated by process. Maps from match of BDG Branch on User to Name on Branch.</description>
    <inlineHelpText>ID of matching Branch object. Uses BDG Branch to match.</inlineHelpText>
    <label>Branch_ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>