unpackaged/main/default/objects/User/fields/Can_Override_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Can_Override_Warehouse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Override Warehouse</label>
    <type>Checkbox</type>
</CustomField>