unpackaged/main/default/objects/User/fields/ISR__c.field-meta.xml
<CustomField>
    <fullName>ISR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box if user is an Inside Sales Rep</description>
    <inlineHelpText>Check box if user is an Inside Sales Rep</inlineHelpText>
    <label>ISR</label>
    <type>Checkbox</type>
</CustomField>