unpackaged/main/default/objects/User/fields/My_Performance_User__c.field-meta.xml
<CustomField>
    <fullName>My_Performance_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>My Performance reporting and dashboards</description>
    <inlineHelpText>My Performance reporting and dashboards</inlineHelpText>
    <label>My Performance User</label>
    <type>Checkbox</type>
</CustomField>