unpackaged/main/default/objects/User/fields/My_Teams_Performance_User__c.field-meta.xml
<CustomField>
    <fullName>My_Teams_Performance_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>My Team's Performance dashboards and reports</description>
    <inlineHelpText>My Team's Performance dashboards and reports</inlineHelpText>
    <label>My Team's Performance User</label>
    <type>Checkbox</type>
</CustomField>