unpackaged/main/default/objects/User/fields/SBQQ__ResetProductLookup__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ResetProductLookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that determines whether Product Lookup data (guided selling questions, search filters and search results) are cleared after user selects desired products.</description>
    <inlineHelpText>Check to clear search filters and results every time you add products to your quotes. Otherwise, your previous selections are kept.</inlineHelpText>
    <label>Reset Product Lookup</label>
    <type>Checkbox</type>
</CustomField>