unpackaged/main/default/objects/User/fields/Transactional_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Transactional_Sales_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transactional Sales Rep</label>
    <type>Checkbox</type>
</CustomField>