unpackaged/main/default/objects/User/fields/Vanguard_Branch__c.field-meta.xml
<CustomField>
    <fullName>Vanguard_Branch__c</fullName>
    <description>Branch is the name of the Branch that correlates to the Department Number.</description>
    <label>Vanguard Branch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>Charlotte</fullName>
            </value>
            <value>
                <fullName>Corporate Major Projects</fullName>
            </value>
            <value>
                <fullName>Dallas</fullName>
            </value>
            <value>
                <fullName>Houston</fullName>
            </value>
            <value>
                <fullName>Lancaster</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>New Orleans</fullName>
            </value>
            <value>
                <fullName>Raleigh</fullName>
            </value>
            <value>
                <fullName>San Antonio</fullName>
            </value>
            <value>
                <fullName>Schiavi</fullName>
            </value>
            <value>
                <fullName>Midwest</fullName>
            </value>
            <value>
                <fullName>Tampa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>