unpackaged/main/default/objects/User/fields/Vanguard_Dept__c.field-meta.xml
<CustomField>
    <fullName>Vanguard_Dept__c</fullName>
    <description>Vanguard specific Department picklist. One to One relationship to Branch.</description>
    <label>Vanguard Dept</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20050</fullName>
            </value>
            <value>
                <fullName>20100</fullName>
            </value>
            <value>
                <fullName>20222</fullName>
            </value>
            <value>
                <fullName>20300</fullName>
            </value>
            <value>
                <fullName>30925</fullName>
            </value>
            <value>
                <fullName>30950</fullName>
            </value>
            <value>
                <fullName>30975</fullName>
            </value>
            <value>
                <fullName>40125</fullName>
            </value>
            <value>
                <fullName>40600</fullName>
            </value>
            <value>
                <fullName>40675</fullName>
            </value>
            <value>
                <fullName>40685</fullName>
            </value>
            <value>
                <fullName>40800</fullName>
            </value>
            <value>
                <fullName>40850</fullName>
            </value>
            <value>
                <fullName>55000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>