unpackaged/main/default/objects/User/fields/Vanguard_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Vanguard_User_ID__c</fullName>
    <externalId>true</externalId>
    <label>Vanguard User ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>