unpackaged/main/default/objects/User/validationRules/Branch_Reqd.validationRule-meta.xml
<ValidationRule>
    <fullName>Branch_Reqd</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Branch__c, "")</errorConditionFormula>
    <errorDisplayField>Branch__c</errorDisplayField>
    <errorMessage>Please specify the BOXX Branch.</errorMessage>
</ValidationRule>