unpackaged/main/default/objects/User/listViews/Active_with_Address.listView-meta.xml
<ListView>
    <fullName>Active_with_Address</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.ADDRESS_STREET</columns>
    <columns>CORE.USERS.ADDRESS_CITY</columns>
    <columns>CORE.USERS.STATE_CODE</columns>
    <columns>CORE.USERS.ADDRESS_ZIP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active with Address</label>
</ListView>