unpackaged/main/default/objects/User/listViews/Active_with_Division.listView-meta.xml
<ListView>
    <fullName>Active_with_Division</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>BDG_Branch__c</columns>
    <columns>BDG_Department__c</columns>
    <columns>BDG_Division__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active with Division</label>
</ListView>