unpackaged/main/default/objects/User/listViews/AllUsers.listView-meta.xml
<ListView>
    <fullName>AllUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.FORECAST_ENABLED</columns>
    <columns>BDG_Branch__c</columns>
    <columns>BDG_Department__c</columns>
    <columns>BDG_Division__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Users</label>
</ListView>