unpackaged/main/default/objects/User/listViews/InactiveUsers.listView-meta.xml
<ListView>
    <fullName>InactiveUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.ADDRESS_CITY</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>BDG_Branch__c</columns>
    <columns>BDG_Division__c</columns>
    <columns>BDG_Department__c</columns>
    <columns>CORE.USERS.FORECAST_ENABLED</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Users</label>
</ListView>